2006-05-18 Naba Kumar  <naba@gnome.org>

	* libanjuta/interfaces/libanjuta.idl,
	plugins/document-manager/action-callbacks.c,
	plugins/editor/print.c,
	plugins/editor/text_editor.c,
	plugins/editor/text_editor.h,
	plugins/editor/text_editor_prefs.c: Fixed zooming.
	
	* libanjuta/interfaces/libanjuta.idl: Defined IAnjutaEditorCell
	interface for character iteration and IAnjutaEditorAssist interface
	for autocompletions and editor tips.

2006-05-18  Johannes Schmid <jhs@cvs.gnome.org>

	Patch from Günther Brammer <GBrammer@gmx.de>:
		* plugins/document-manager/anjuta-docman.c:
		Make tabs smaller but keep nice closing icon

	* plugins/document-manager/anjuta-docman.c:
	* plugins/document-manager/Makefile.am:
	
	Added nice mime-icons to the editor tabs

2006-05-17  Johannes Schmid <jhs@cvs.gnome.org>

	* configure.in: Bumped version to 2.0.3 (pre-release increment)
	
	* plugins/symbol-browser/an_symbol_view.c:
	- Fixed crasher
	- Fixed symbol searching (Yang Hong (#341997))
	
	* plugins/devhelp/htmlview.c:
	Fixed devhelp plugin
	
	* plugins/build-basic-autotools/build-basic-autotools.c:
	* plugins/search/search-replace.c:
	* plugins/document-manager/anjuta-docman.c:
	
	Only add a marker to a line where it makes sense!

>>>>>>> 1.1257
=== anjuta 2.0.2 ===

2006-05-15  Naba Kumar  <naba@gnome.org>

	* configure.in: set required versions for
	gdl and glade3.
	
2006-05-15  Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/glade/plugin.c:
	Fixed signal connection for "gtk-doc-search"

2006-05-15  Johannes Schmid <jhs@cvs.gnome.org>

	* NEWS: Set release date, add known issues
	
	* libanjuta/anjuta-shell.c:
	Use DEBUG_PRINT instead of g_warning (to be able to pass --g-fatal-warnings
	and debug other gtk-warnings/criticals)
	
	* plugins/build-basic-autotools/build-basic-autotools.c:
	Fixed gtk-critical (gtk_hash_table_destroy(NULL))
	
	* plugins/sourceview/anjuta-view.c:
	* plugins/sourceview/sourceview-args.c:
	* plugins/sourceview/sourceview-scope.c: