@@ -1,3 +1,8 @@
+2006-05-20  Naba Kumar  <naba@gnome.org>
+
+	* tagmanager/tm_symbol.c: Prevent infinite recursive (detected
+        while loading abiword-2.4.4/abi project).
+
 2006-05-18 Naba Kumar  <naba@gnome.org>
 
 	* libanjuta/interfaces/libanjuta.idl,
